[package]
name = "mdns"
version = "0.3.1"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/mdns"
repository = "https://github.com/dylanmckay/mdns"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery"]

[dependencies]
bytes = "0.5"
dns-parser = "0.8.0"
net2 = "0.2"
err-derive = "0.2.1"
futures = "0.3.5"
async-stream = "0.2.0"
tokio = { version = "0.2.20", features = ["net", "time", "io-util"] }
tokio-util = { version = "0.3.1", features = ["udp", "codec"] }
